--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -10,11 +10,11 @@
     <% } %>
     <!-- 目录内容 -->
 <% if (!index && post.toc){ %>
-  <p class="show-toc-btn" id="show-toc-btn" onclick="showToc();" style="display:none">
+  <p class="show-toc-btn" id="show-toc-btn" onclick="showToc();" >
         <span class="btn-bg"></span>
         <span class="btn-text">文章导航</span>
         </p>
-<div id="toc-article" class="toc-article">
+<div id="toc-article" class="toc-article" style="display:none">
     <span id="toc-close" class="toc-close" title="隐藏导航" onclick="showBtn();">×</span>
   <strong class="toc-title">文章目录</strong>
          <%- toc(post.content) %>
